On branch 0/build/1/osx - fixes to osx build